# echo_mod_dyn

./: CMakeLists.txt  README.md  expected_output.txt
dynclient/: CMakeLists.txt
dynclient/src/: dynclient.c
dynserver/: CMakeLists.txt
dynserver/src/: dynserver.c
einit/: CMakeLists.txt
einit/src/: core.psl  init.yaml.in  security.psl  trusted.psl
resources/: DynClient.edl  DynServer.edl  IDynPing.idl
resources/include/: echo_mod_dyn_common.h
